# draft_mtg

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose-prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  tasks.py  test.json
.github/workflows/: deploy.yml
app/: alembic.ini  config.py  main.py  setup_admin.py
app/alembic/: env.py
app/alembic/versions/: 16755b2953fd_.py  180d4582a349_add_rounds_table_and_update_matches.py  279feb43cbf2_auto_migration.py  454ed962799a_add_migration.py  4989faef3c48_add_rounds_table_and_update_matches.py  4a13c3b4d22a_.py  51ca34677a40_add_migration.py  6924f25e80a5_.py  70a997e017fb_auto_generated_migration.py  7348679f4898_auto_migration.py  783704b79d5c_.py  86d0f5b1e948_.py  88cba00d81d5_.py  8e6274aca9ef_add_sequences_to_models.py  921e20dc6813_create_migration.py  a66802017847_.py  aa03b3e6964b_.py  b37c41780062_.py  d03fd5738693_initial_migration.py  eccc86aacfbe_add_migration.py  f118f6cac19c_.py  fa5fee7d0885_.py  fca2f6b674fb_create_migration.py
app/auth/: models.py  schemas.py  utils.py
app/auth/routers/: login.py  users.py
app/core/: models.py  schemas.py
app/core/routers/: draft_players.py  drafts.py  matches.py  players.py  rounds.py
app/core/schemas/: draft_players.py  drafts.py  matches.py  players.py  rounds.py
app/core/tests/: conftest.py  test_drafts.py
app/core/utils/: drafts.py  pagination.py
app/db/: database.py  models.py
app/routers/: players.py
nginx/: nginx.conf
