[tool.poetry]
name = "draft_mtg"
version = "1.0.0"
description = ""
authors = ["Filip Karpinski <F.Karpinski@o2.pl>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
typer = "^0.15.1"
fastapi = "^0.115.11"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
pre-commit = "^4.1.0"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
python-dotenv = "^1.0.0"
ruff = "^0.11.2"
asyncpg = "^0.30.0"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pylint = "3.2.1"
pytest-cov = "5"
coverage = "7.5.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
mypy = "^1.13.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "app.alembic.*"
ignore_errors = true
follow_imports = "skip"

[tool.autoflake]
remove_all_unused_imports = true
remove_unused_variables = true

[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "app/alembic/*",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10

